from model.player import Player

class AIPlayer(Player):
    def __init__(self) -> None:
        super().__init__()

    def make_turn(self):
        pass
    