from model.player import Player

class HumanPlayer(Player):
    def __init__(self) -> None:
        super().__init__()        